--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,3 +20,13 @@
 body > .alert {
   margin-bottom: 0;
 }
+
+.btn-secondary {
+background-color: #C13584!important;
+border-color:#C13584;
+color:rgb(230, 220, 231)!important;
+}
+.btn-primary {
+background-color:#522e92!important;
+border-color:#522e92!important;
+}
