--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,10 +1,26 @@
-<footer class="footer text-muted bg-light">
-  <div class="container mx-auto d-flex justify-content-between">
-    <span>© <%= Date.today.year %> Your Company</span>
-    <ul class="d-inline list-inline mb-0 float-right">
-      <li class="list-inline-item mr-3"><%= link_to "Terms", terms_path %></li>
-      <li class="list-inline-item mr-3"><%= link_to "Privacy", privacy_path %></li>
-    </ul>
-  </div>
+<footer class="footer text-center text-white mt-4" style="background-color:  #412474;">
+    <!-- Grid container -->
+    <div class="container p-4 pb-0">
+      <!-- Section: CTA -->
+      <section class="">
+        <p class="d-flex justify-content-center align-items-center">
+          <span class="me-3">Register on Instagram for free</span>
+           <%= link_to "Sign Up!", new_user_registration_path, class: "btn btn-outline-light btn-rounded" %>
+         
+        </p>
+      </section>
+      <!-- Section: CTA -->
+    </div>
+    <!-- Grid container -->
+
+    <!-- Copyright -->
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+      <span>© <%= Date.today.year %> Instagram - by</span>
+      <a class="text-white" href="https://xhostcom.com/">Paul Anthony McGowan</a>
+    </div>
+    <!-- Copyright -->
 </footer>
+
+
+
 
